New examples for Progress Monitor v1.1 in TOC
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@150966 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/index.html
+++ b/examples/index.html
@@ -92,9 +92,12 @@ li.r2 {
 <h2>&nbsp;GUI Monitor </h2>
 <h3>Table of contents</h3>
 <ul>
-<li class="r1"><a href="monitor_simple.php">Basic</a> - Simple and default Monitor ProgressBar example. Uses HTML_Page generator.
-<li class="r2"><a href="monitor_complex.php">Complex</a> - Complex Monitor ProgressBar example. Uses IT[x] template family.
-<li class="r1"><a href="template_embedded.php">Template</a> - A template sample. Uses IT[x] template family.
+<li class="r1"><a href="monitor_default1.php">Default 1</a> - Uses default QF renderer without any customization.</li>
+<li class="r2"><a href="monitor_default2.php">Default 2</a> - Uses default QF renderer with a PEAR::Log user callback.</li>
+<li class="r1"><a href="monitor_method_callback.php">Determinate</a> - Customs default QF renderer and a Method-Handler callback.</li>
+<li class="r2"><a href="monitor_function_callback.php">Indeterminate</a> - Customs default QF renderer and a Function-Handler callback.</li>
+<li class="r1"><a href="monitor_itdynamic.php">ITDynamic</a> - Customs ITDynamic QF renderer and a Method-Handler callback.</li>
+<li class="r2"><a href="monitor_htmlpage.php">HTML_Page</a> - Uses HTML_Page generator without user-callback.</li>
 </ul>
 
 <p align="right">[<a href="#top">Top</a>]</p>
