two new examples for HTML_Progress_Generator in TOC
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@151338 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/index.html
+++ b/examples/index.html
@@ -120,10 +120,13 @@ li.r2 {
 
 <p align="right">[<a href="#top">Top</a>]</p>
 
-<h2>&nbsp;ProgressMaker </h2>
+<h2>&nbsp;Progress Generator </h2>
 <h3>Table of contents</h3>
+<p>Build your own progress bar with interactive tools. 
+Run demo, and save PHP/CSS source-code.</p>
 <ul>
-<li class="r1"><a href="ProgressMaker.php">My own progress</a> - Make your own progress bar with interactive tools.
+<li class="r1"><a href="generator_htmlpage.php">Standard</a> - Uses HTML_Page generator for form rendering.</li>
+<li class="r2"><a href="generator_embedded.php">HTML embedded</a> - Include Progress Generator in your own pages with Actions customized.</li>
 </ul>
 
 <p align="right">[<a href="#top">Top</a>]</p>
