added new examples about web http upload and html_progress (1.1 or better)
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@162117 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/index.html
+++ b/examples/index.html
@@ -76,6 +76,17 @@
 
 <p align="right">[<a href="#top">Top</a>]</p>
 
+<h2>File Upload </h2>
+<h3>Table of contents</h3>
+<ul>
+<li class="r1"><a href="upload/http1.html">HTTP 1</a> - Upload files with your web browser to a web server. Single page (using frames).
+<li class="r2"><a href="upload/http2.html">HTTP 2</a> - Upload files with your web browser to a web server. Progress meter in a popup.
+<li class="r1"><a href="upload/http3.html">HTTP 3</a> - Mixed field Upload. Single page (using frames).
+<li class="r2"><a href="upload/http4.html">HTTP 4</a> - Upload files with your web browser to a web server and logs operations into a file.
+</ul>
+
+<p align="right">[<a href="#top">Top</a>]</p>
+
 <h2>GUI Monitor </h2>
 <h3>Table of contents</h3>
 <ul>
