HTML_Progress examples reorganized by category
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@162160 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/index.html
+++ b/examples/index.html
@@ -87,33 +87,35 @@
 
 <p align="right">[<a href="#top">Top</a>]</p>
 
-<h2>GUI Monitor </h2>
-<h3>Table of contents</h3>
-<ul>
-<li class="r1"><a href="monitor_default1.html">Default 1</a> - Uses default QF renderer without any customization.</li>
-<li class="r2"><a href="monitor_default2.html">Default 2</a> - Uses default QF renderer with a PEAR::Log user callback.</li>
-<li class="r1"><a href="monitor_method_callback.html">Determinate</a> - Customs default QF renderer and a Method-Handler callback.</li>
-<li class="r2"><a href="monitor_function_callback.html">Indeterminate</a> - Customs default QF renderer and a Function-Handler callback.</li>
-<li class="r1"><a href="monitor_itdynamic.html">ITDynamic</a> - Customs ITDynamic QF renderer and a Method-Handler callback.</li>
-<li class="r2"><a href="monitor_htmlpage.html">HTML_Page</a> - Uses HTML_Page generator without user-callback.</li>
-</ul>
-
-<p align="right">[<a href="#top">Top</a>]</p>
-
-<h2>Observer </h2>
-<h3>Table of contents</h3>
-<ul>
-<li class="r1"><a href="observer_standard.html">Default</a> - Observer ProgressBar example. Uses the default observer class.
-<li class="r2"><a href="observer_simple.html">Basic</a> - Observer ProgressBar example. Uses a custom observer class.
-<li class="r1"><a href="observer_complex.html">Complex</a> - Observer ProgressBar example. Uses a custom observer class that handled progress of the 2nd bar.
-</ul>
-
-<p align="right">[<a href="#top">Top</a>]</p>
-
 <h2>Multiple progress bar on same page </h2>
 <h3>Table of contents</h3>
 <ul>
 <li class="r1"><a href="multiple_vertical.html">VuMeter</a> - Renders 2 vertical progress bar.
+</ul>
+
+<p align="right">[<a href="#top">Top</a>]</p>
+
+<h2>Progress Monitor (GUI)</h2>
+<h3>Table of contents</h3>
+<p>Examples of How to use the HTML_Progress_Monitor class.</p>
+<ul>
+<li class="r1"><a href="monitor/default1.html">Default 1</a> - Uses default QF renderer without any customization.</li>
+<li class="r2"><a href="monitor/default2.html">Default 2</a> - Uses default QF renderer with a PEAR::Log user callback.</li>
+<li class="r1"><a href="monitor/method_callback.html">Determinate</a> - Customs default QF renderer and a Method-Handler callback.</li>
+<li class="r2"><a href="monitor/function_callback.html">Indeterminate</a> - Customs default QF renderer and a Function-Handler callback.</li>
+<li class="r1"><a href="monitor/itdynamic.html">ITDynamic</a> - Customs ITDynamic QF renderer and a Method-Handler callback.</li>
+<li class="r2"><a href="monitor/htmlpage.html">HTML_Page</a> - Uses HTML_Page generator without user-callback.</li>
+</ul>
+
+<p align="right">[<a href="#top">Top</a>]</p>
+
+<h2>Progress Observer </h2>
+<h3>Table of contents</h3>
+<p>Examples of How to use the HTML_Progress_Observer class.</p>
+<ul>
+<li class="r1"><a href="observer/default.html">Default</a> - Uses the default observer class.
+<li class="r2"><a href="observer/simple.html">Simple</a> - Uses a custom observer class.
+<li class="r1"><a href="observer/complex.html">Complex</a> - Uses a custom observer class that handle progress of a 2nd bar.
 </ul>
 
 <p align="right">[<a href="#top">Top</a>]</p>
@@ -123,8 +125,9 @@
 <p>Build your own progress bar with interactive tools. 
 Run demo, and save PHP/CSS source-code.</p>
 <ul>
-<li class="r1"><a href="generator_htmlpage.php">Standard</a> - Uses HTML_Page generator for form rendering.</li>
-<li class="r2"><a href="generator_embedded.php">HTML embedded</a> - Include Progress Generator in your own pages with Actions customized.</li>
+<li class="r1"><a href="generator/default.html">Default</a> - None customization used.</li>
+<li class="r2"><a href="generator/htmlpage.html">Standard</a> - Uses HTML_Page generator for form rendering.</li>
+<li class="r1"><a href="generator/embedded.html">Embedded</a> - Include Progress Generator in your own pages with Actions customized.</li>
 </ul>
 
 <p align="right">[<a href="#top">Top</a>]</p>
