add new example in File Upload category
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@162545 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/index.html
+++ b/examples/index.html
@@ -54,16 +54,25 @@
 
 <p align="right">[<a href="#top">Top</a>]</p>
 
-<h2>Polygonal shape </h2>
+<h2>News shape </h2>
 <h3>Table of contents</h3>
 <ul>
-<li class="r1"><a href="square.html">Square 3x3</a> - beginning at different corner.
-<li class="r2"><a href="squareback.html">Square 4x4</a> - Square Progress filled in reverse way.
-<li class="r1"><a href="rectangle.html">Rectangle 6x4</a> - Basic Rectangle Progress style.
-<li class="r2"><a href="rectangleback.html">Rectangle 15x3</a> - Rectangle Progress filled in reverse way.
-<li class="r1"><a href="circleplain.html">plain Circle 360</a> - a plain Circle Progress style.
-<li class="r2"><a href="circleback.html">Medium circle</a> - Medium Circle Progress filled in reverse way.
-<li class="r1"><a href="ellipse.html">Ellipse 360</a> - Horizontal Ellipse Progress style.
+<li class="r1"><a href="newshape/square.html">Square 3x3</a> - beginning at different corner.
+<li class="r2"><a href="newshape/squareback.html">Square 4x4</a> - Square Progress filled in reverse way.
+<li class="r1"><a href="newshape/rectangle.html">Rectangle 6x4</a> - Basic Rectangle Progress style.
+<li class="r2"><a href="newshape/rectangleback.html">Rectangle 15x3</a> - Rectangle Progress filled in reverse way.
+<li class="r1"><a href="newshape/circleplain.html">plain Circle 360</a> - a plain Circle Progress style.
+<li class="r2"><a href="newshape/circleback.html">Medium circle</a> - Medium Circle Progress filled in reverse way.
+<li class="r1"><a href="newshape/ellipse.html">Ellipse 360</a> - Horizontal Ellipse Progress style.
+</ul>
+
+<p align="right">[<a href="#top">Top</a>]</p>
+
+<h2>Preload </h2>
+<h3>Table of contents</h3>
+<ul>
+<li class="r1"><a href="preload/shockwaveflash.html">Large file</a> - Display a basic ProgressBar while retrieving a shockwave flash object.
+<li class="r2"><a href="preload/hidden.html">Hide progress meter</a> - At end of a long process, you may hide the progress bar and stay on same page.
 </ul>
 
 <p align="right">[<a href="#top">Top</a>]</p>
@@ -71,7 +80,8 @@
 <h2>Indeterminate Mode </h2>
 <h3>Table of contents</h3>
 <ul>
-<li class="r1"><a href="indeterminate.html">Expert</a> - Adding indeterminate mode to ProgressBar.
+<li class="r1"><a href="indeterminate/half_basic.html">Half basic</a> - runs a progress bar in indeterminate mode without a monitor.
+<li class="r2"><a href="indeterminate/half_monitor.html">Half monitor</a> - Begin in indeterminate mode and finish process in determinate mode with a monitor.
 </ul>
 
 <p align="right">[<a href="#top">Top</a>]</p>
@@ -83,14 +93,15 @@
 <li class="r2"><a href="upload/http2.html">HTTP 2</a> - Upload files with your web browser to a web server. Progress meter in a popup.
 <li class="r1"><a href="upload/http3.html">HTTP 3</a> - Mixed field Upload. Single page (using frames).
 <li class="r2"><a href="upload/http4.html">HTTP 4</a> - Upload files with your web browser to a web server and logs operations into a file.
+<li class="r1"><a href="upload/ftp.html">FTP</a> - Upload file on a remote ftp server that may be different than webserver.
 </ul>
 
 <p align="right">[<a href="#top">Top</a>]</p>
 
-<h2>Multiple progress bar on same page </h2>
+<h2>Multiple progress meter on same page </h2>
 <h3>Table of contents</h3>
 <ul>
-<li class="r1"><a href="multiple_vertical.html">VuMeter</a> - Renders 2 vertical progress bar.
+<li class="r1"><a href="multiple/vertical.html">VuMeter</a> - Renders 2 vertical progress bar.
 </ul>
 
 <p align="right">[<a href="#top">Top</a>]</p>
