examples TOC of version 1.2.0
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@162713 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta name="author" content="Laurent Laville" />
-<title>PEAR/HTML/Progress-Class Examples</title>
+<title>PEAR::HTML::Progress-Class Examples</title>
 <link rel="stylesheet" href="examples.css" />
 </head>
 <body>
@@ -16,40 +16,29 @@
 
 <div align="right">$Date$</div>
 
-<h2>Horizontal loading bar </h2>
+<h2>Horizontal progress meter </h2>
 <h3>Table of contents</h3>
 <ul>
-<li class="r1"><a href="ancestor.html">Ancestor</a> - Basic Horizontal ProgressBar v0.5 style example.
-<li class="r2"><a href="bgimages.html">Background Images</a> - Natural Horizontal with background images ProgressBar example.
-<li class="r1"><a href="bluesand.html">BlueSand</a> - Natural Horizontal ProgressBar example with blue skin.
-<li class="r2"><a href="bluesandplus.html">BlueSandPlus</a> - Natural Horizontal ProgressBar example with JavaScript customization.
-<li class="r1"><a href="bullit.html">BullIt</a> - Natural Horizontal plain ProgressBar example.
-<li class="r2"><a href="javadanse.html">JavaDanse</a> - 20 cells Reverse Horizontal ProgressBar example with JavaScript customization.
-<li class="r1"><a href="redsandback.html">RedSandBack</a> - 5 cells Reverse Horizontal ProgressBar example with red skin.
-<li class="r2"><a href="smallest.html">Smallest</a> - Natural Horizontal smallest ProgressBar example.
+<li class="r1"><a href="horizontal/ancestor.html">Ancestor</a> - Basic Horizontal ProgressBar v0.5 style example.
+<li class="r2"><a href="horizontal/bgimages.html">Background Images</a> - Natural Horizontal with background images ProgressBar example.
+<li class="r1"><a href="horizontal/bluesand.html">BlueSand</a> - Natural Horizontal ProgressBar example with blue skin.
+<li class="r2"><a href="horizontal/bluesandplus.html">BlueSandPlus</a> - Natural Horizontal ProgressBar example with JavaScript customization.
+<li class="r1"><a href="horizontal/bullit.html">BullIt</a> - Natural Horizontal plain ProgressBar example.
+<li class="r2"><a href="horizontal/javadanse.html">JavaDanse</a> - 20 cells Reverse Horizontal ProgressBar example with JavaScript customization.
+<li class="r1"><a href="horizontal/redsandback.html">RedSandBack</a> - 5 cells Reverse Horizontal ProgressBar example with red skin.
+<li class="r2"><a href="horizontal/smallest.html">Smallest</a> - Natural Horizontal smallest ProgressBar example.
+<li class="r1"><a href="horizontal/model.html">Model</a> - ProgressBar data model example.
+<li class="r2"><a href="horizontal/nostring.html">Without String</a> - an horizontal progress meter with no percent information.
+<li class="r1"><a href="horizontal/string.html">With String</a> - an horizontal progress meter with custom string.
 </ul>
 
 <p align="right">[<a href="#top">Top</a>]</p>
 
-<h2>Constructor tests with progress structure dump </h2>
+<h2>Vertical progress meter </h2>
 <h3>Table of contents</h3>
 <ul>
-<li class="r1"><a href="constructor_basic.html">Basic</a> - Basic Horizontal ProgressBar example.
-<li class="r2"><a href="constructor_horizontal_limit.html">HorizontalLimit</a> - Horizontal limit ProgressBar example.
-<li class="r1"><a href="constructor_model.html">Model</a> - ProgressBar model example.
-<li class="r2"><a href="constructor_vertical.html">Vertical</a> - Basic Vertical ProgressBar example.
-<li class="r1"><a href="constructor_vertical_limit.html">VerticalLimit</a> - Vertical limit ProgressBar example.
-<li class="r2"><a href="horizontal_nostring.html">Without String</a> - Horizontal no String ProgressBar example.
-<li class="r1"><a href="horizontal_string.html">With String</a> - Horizontal String ProgressBar example.
-</ul>
-
-<p align="right">[<a href="#top">Top</a>]</p>
-
-<h2>Logs errors on multi drivers </h2>
-<h3>Table of contents</h3>
-<ul>
-<li class="r1"><a href="display_errors.html">Display</a> - API errors are logs only on browser screen.
-<li class="r2"><a href="log_errors.html">File</a> - API errors are logs on file and also (by default) on browser screen.
+<li class="r2"><a href="vertical/basic.html">Vertical</a> - Basic Vertical progress meter.
+<li class="r1"><a href="vertical/limit.html">VerticalLimit</a> - Vertical limit progress meter.
 </ul>
 
 <p align="right">[<a href="#top">Top</a>]</p>
@@ -102,6 +91,15 @@
 <h3>Table of contents</h3>
 <ul>
 <li class="r1"><a href="multiple/vertical.html">VuMeter</a> - Renders 2 vertical progress bar.
+</ul>
+
+<p align="right">[<a href="#top">Top</a>]</p>
+
+<h2>Error Management </h2>
+<h3>Table of contents</h3>
+<ul>
+<li class="r1"><a href="errorstack/display_errors.html">Display</a> - API errors are logs only on browser screen.
+<li class="r2"><a href="errorstack/log_errors.html">File</a> - API errors are logs on file and also (by default) on browser screen.
 </ul>
 
 <p align="right">[<a href="#top">Top</a>]</p>
