add new example with template engine integration ( ITx family )
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@164187 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/index.html
+++ b/examples/index.html
@@ -95,6 +95,14 @@
 
 <p align="right">[<a href="#top">Top</a>]</p>
 
+<h2>Template engine integration </h2>
+<h3>Table of contents</h3>
+<ul>
+<li class="r1"><a href="templates/itxstatic.html">ITx static</a> - horizontal progress meter embedded into IT template pattern.
+</ul>
+
+<p align="right">[<a href="#top">Top</a>]</p>
+
 <h2>Error Management </h2>
 <h3>Table of contents</h3>
 <ul>
