new error management examples for final version 1.2.0 of HTML_Progress (use the new error system plugins rather than PEAR_ErrorStack and Log packages)
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@165641 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/index.html
+++ b/examples/index.html
@@ -106,8 +106,15 @@
 <h2>Error Management </h2>
 <h3>Table of contents</h3>
 <ul>
-<li class="r1"><a href="errorstack/display_errors.html">Display</a> - API errors are logs only on browser screen.
-<li class="r2"><a href="errorstack/log_errors.html">File</a> - API errors are logs on file and also (by default) on browser screen.
+<li class="r1"><a href="errorstack/display_errors-p1.html">Display</a> - standard API exceptions.
+<li class="r2"><a href="errorstack/display_errors-p2.html">Display</a> - standard API errors and caught them.
+<li class="r1"><a href="errorstack/display_errors-p3.html">Ignore</a> - logging system for all API errors, but keep errors into stack.
+<li class="r2"><a href="errorstack/display_errors-p4.html">Display</a> - standard API exceptions, and avoid to die (default behaviour).
+<li class="r1"><a href="errorstack/display_errors-p5.html">Ignore</a> - some API errors.
+<li class="r2"><a href="errorstack/display_errors-p6.html">User</a> - error handler to display API errors with custom lineFormat and contextFormat.
+<li class="r1"><a href="errorstack/log_errors-p1.html">File</a> - logging API errors.
+<li class="r2"><a href="errorstack/log_errors-p2.html">File</a> - and display logging system in development phase.
+<li class="r1"><a href="errorstack/log_errors-p3.html">Database</a> - logging API errors.
 </ul>
 
 <p align="right">[<a href="#top">Top</a>]</p>
