fixed security pb when opening source file with highlighter
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@165944 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/indeterminate/half_monitor.html
+++ b/examples/indeterminate/half_monitor.html
@@ -95,7 +95,7 @@ increment = 10
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=indeterminate/half_monitor.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./indeterminate/half_monitor.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
