--- a/examples/multiple/vertical.html
+++ b/examples/multiple/vertical.html
@@ -134,7 +134,7 @@ valign           = bottom
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=multiple/vertical.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./multiple/vertical.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
