--- a/examples/preload/shockwaveflash.html
+++ b/examples/preload/shockwaveflash.html
@@ -71,7 +71,7 @@ Animation speed is set to 10 (see source at line 79).
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=preload/shockwaveflash.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./preload/shockwaveflash.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
