--- a/examples/upload/http3.html
+++ b/examples/upload/http3.html
@@ -124,10 +124,10 @@ count = 20
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
 <p><b>The form file selection:</b>
-<a target="_blank" href="../highlighter.php?file=upload/mixedupload.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./upload/mixedupload.php">Open</a> source listing in a new window.
 </p>
 <p><b>The progress meter in indeterminate mode:</b>
-<a target="_blank" href="../highlighter.php?file=upload/vbar.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./upload/vbar.php">Open</a> source listing in a new window.
 </p>
 <p>[<a href="#top">Top</a>]</p>
 
