--- a/examples/upload/http4.html
+++ b/examples/upload/http4.html
@@ -133,10 +133,10 @@ background-image = download.gif
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
 <p><b>The form file selection:</b>
-<a target="_blank" href="../highlighter.php?file=upload/formbasic.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./upload/formbasic.php">Open</a> source listing in a new window.
 </p>
 <p><b>The progress meter in indeterminate mode:</b>
-<a target="_blank" href="../highlighter.php?file=upload/hbar.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./upload/hbar.php">Open</a> source listing in a new window.
 </p>
 <p>[<a href="#top">Top</a>]</p>
 
