--- a/examples/horizontal/bgimages.html
+++ b/examples/horizontal/bgimages.html
@@ -92,7 +92,7 @@ valign           = left
 		
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=horizontal/bgimages.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./horizontal/bgimages.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
