--- a/examples/horizontal/bluesand.html
+++ b/examples/horizontal/bluesand.html
@@ -89,7 +89,7 @@ align            = center
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=horizontal/bluesand.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./horizontal/bluesand.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
