--- a/examples/horizontal/bluesandplus.html
+++ b/examples/horizontal/bluesandplus.html
@@ -141,7 +141,7 @@ function showCell(pCell, pIdent, pVisibility)
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=horizontal/bluesandplus.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./horizontal/bluesandplus.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
