--- a/examples/horizontal/bullit.html
+++ b/examples/horizontal/bullit.html
@@ -96,7 +96,7 @@ valign           = top
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=horizontal/bullit.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./horizontal/bullit.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
