--- a/examples/horizontal/javadanse.html
+++ b/examples/horizontal/javadanse.html
@@ -93,7 +93,7 @@ valign    = bottom
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=horizontal/javadanse.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./horizontal/javadanse.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
