--- a/examples/horizontal/smallest.html
+++ b/examples/horizontal/smallest.html
@@ -86,7 +86,7 @@ background-color = #C3C6C3
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=horizontal/smallest.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./horizontal/smallest.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
