--- a/examples/newshape/circleback.html
+++ b/examples/newshape/circleback.html
@@ -91,7 +91,7 @@ active-color   = red
 		
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=newshape/circleback.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./newshape/circleback.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
