--- a/examples/newshape/ellipse.html
+++ b/examples/newshape/ellipse.html
@@ -88,7 +88,7 @@ active-color   = navy
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=newshape/ellipse.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./newshape/ellipse.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
