--- a/examples/newshape/rectangle.html
+++ b/examples/newshape/rectangle.html
@@ -81,7 +81,7 @@ height         = 15
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=newshape/rectangle.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./newshape/rectangle.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
