--- a/examples/newshape/rectangleback.html
+++ b/examples/newshape/rectangleback.html
@@ -72,7 +72,7 @@ height         = 10
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=newshape/rectangleback.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./newshape/rectangleback.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
