--- a/examples/newshape/square.html
+++ b/examples/newshape/square.html
@@ -80,7 +80,7 @@ height = 20
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=newshape/square.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./newshape/square.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
