--- a/examples/newshape/squareback.html
+++ b/examples/newshape/squareback.html
@@ -78,7 +78,7 @@ height = 10
 		
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=newshape/squareback.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./newshape/squareback.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
