--- a/examples/preload/hidden.html
+++ b/examples/preload/hidden.html
@@ -60,7 +60,7 @@ This callback is attached on the progress bar at line 24.</p>
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=preload/hidden.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./preload/hidden.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
