--- a/examples/upload/http1.html
+++ b/examples/upload/http1.html
@@ -124,10 +124,10 @@ active-color = #996
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
 <p><b>The form file selection:</b>
-<a target="_blank" href="../highlighter.php?file=upload/formselfref.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./upload/formselfref.php">Open</a> source listing in a new window.
 </p>
 <p><b>The progress meter in indeterminate mode:</b>
-<a target="_blank" href="../highlighter.php?file=upload/progressbar.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./upload/progressbar.php">Open</a> source listing in a new window.
 </p>
 <p>[<a href="#top">Top</a>]</p>
 
