--- a/examples/vertical/limit.html
+++ b/examples/vertical/limit.html
@@ -68,7 +68,7 @@ None. Used all default values.
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=vertical/limit.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./vertical/limit.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
