--- a/examples/generator/default.html
+++ b/examples/generator/default.html
@@ -80,7 +80,7 @@ None, uses all defaults:
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=generator/default.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./generator/default.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
