--- a/examples/generator/embedded.html
+++ b/examples/generator/embedded.html
@@ -103,7 +103,7 @@ and replace :
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=generator/embedded.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./generator/embedded.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
