--- a/examples/generator/htmlpage.html
+++ b/examples/generator/htmlpage.html
@@ -92,7 +92,7 @@ all actions (preview, display, process).
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=generator/htmlpage.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./generator/htmlpage.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
