fixed highlighter links
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@169170 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/monitor/default1.html
+++ b/examples/monitor/default1.html
@@ -80,7 +80,7 @@ increment = 10 (at line 18)
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=monitor/default1.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./monitor/default1.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
