--- a/examples/monitor/default2.html
+++ b/examples/monitor/default2.html
@@ -180,7 +180,7 @@ None. All default values are used.
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=monitor/default2.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./monitor/default2.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
