--- a/examples/monitor/function_callback.html
+++ b/examples/monitor/function_callback.html
@@ -97,7 +97,7 @@ active-color   = #444444
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=monitor/function_callback.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./monitor/function_callback.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
