--- a/examples/monitor/htmlpage.html
+++ b/examples/monitor/htmlpage.html
@@ -69,7 +69,7 @@ None used. Only default values.
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=monitor/htmlpage.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./monitor/htmlpage.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
