--- a/examples/monitor/itdynamic.html
+++ b/examples/monitor/itdynamic.html
@@ -93,7 +93,7 @@ active-color   = #444444
 		
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=monitor/itdynamic.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./monitor/itdynamic.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
