--- a/examples/monitor/method_callback.html
+++ b/examples/monitor/method_callback.html
@@ -96,7 +96,7 @@ active-color = #996
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=monitor/method_callback.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./monitor/method_callback.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
