fixed highlighter links
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@169171 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/observer/complex.html
+++ b/examples/observer/complex.html
@@ -104,7 +104,7 @@ background-color = lightblue
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=observer/complex.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./observer/complex.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
