--- a/examples/observer/default.html
+++ b/examples/observer/default.html
@@ -94,7 +94,7 @@ Set size to 2 pixels at line 30.
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=observer/default.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./observer/default.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
