--- a/examples/observer/simple.html
+++ b/examples/observer/simple.html
@@ -97,7 +97,7 @@ increment = 5 is set at line 47
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
-<a target="_blank" href="../highlighter.php?file=observer/simple.php">Open</a> source listing in a new window.
+<a target="_blank" href="../highlighter.php?file=./observer/simple.php">Open</a> source listing in a new window.
 
 <p>[<a href="#top">Top</a>]</p>
 
