example to demonstrate the setModel API feature (not included in final release 1.2.0)
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@169176 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/index.html
+++ b/examples/index.html
@@ -30,6 +30,7 @@
 <li class="r1"><a href="horizontal/model.html">Model</a> - ProgressBar data model example.
 <li class="r2"><a href="horizontal/nostring.html">Without String</a> - an horizontal progress meter with no percent information.
 <li class="r1"><a href="horizontal/string.html">With String</a> - an horizontal progress meter with custom string.
+<li class="r2"><a href="model/inicommented.html">Model</a> - setModel API feature in action with a .INI config file.
 </ul>
 
 <p align="right">[<a href="#top">Top</a>]</p>
